# semantic-diff

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
.claude/: settings.local.json
.claude/hooks/: refresh-semantic-diff.sh
.claude/hooks.example/: refresh-semantic-diff.sh
.claude/skills/: mermaid-charts.md  release.md  review.md
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  REVIEW-cache-audit.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/milestones/v1.0-phases/01-diff-viewer/: 01-02-PLAN.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/milestones/v1.0-phases/02-hook-integration/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md
.planning/milestones/v1.0-phases/03-semantic-grouping/: 03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/milestones/v1.1-phases/04-red-team-audit/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-VERIFICATION.md
.planning/milestones/v1.1-phases/05-purple-team-hardening/: 05-04-SUMMARY.md
.planning/milestones/v1.1-phases/06-blue-team-testing/: 06-01-PLAN.md  06-03-PLAN.md
.planning/phases/01-diff-viewer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-hook-integration/: 02-01-PLAN.md  02-VERIFICATION.md
.planning/phases/03-semantic-grouping/: 03-01-PLAN.md  03-01-SUMMARY.md
.planning/phases/04-red-team-audit/: 04-01-SUMMARY.md  04-RESEARCH.md  AUDIT-REPORT.md  cargo-audit-output.txt  cargo-deny-output.txt
.planning/phases/05-purple-team-hardening/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-VERIFICATION.md
.planning/phases/06-blue-team-testing/: 06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-SUMMARY.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.playwright-mcp/: page-2026-05-01T05-22-26-020Z.yml  page-2026-05-01T05-22-30-129Z.yml
crates/semantic-diff-cli/: Cargo.toml  build.rs
crates/semantic-diff-cli/src/: assets.rs  cli.rs  config_probe.rs  cost.rs  input.rs  lib.rs  main.rs  orchestrator.rs  port_lock.rs  replay.rs  server.rs
crates/semantic-diff-cli/tests/: history_mode.rs  input_resolution.rs  orchestrator_streaming.rs  runs_api.rs  server_smoke.rs
crates/semantic-diff-core/: Cargo.toml
crates/semantic-diff-core/src/: cache.rs  config.rs  lib.rs  llm_cli.rs  result.rs
crates/semantic-diff-core/src/diff/: mod.rs  parser.rs  untracked.rs
crates/semantic-diff-core/src/grouper/: llm.rs  mod.rs
crates/semantic-diff-core/src/review/: llm.rs  mermaid_lint.rs  mod.rs  verdict.rs
crates/semantic-diff-core/tests/: result_roundtrip.rs
docs/: marketing-campaign.md
schemas/: semantic-diff.schema.json
scripts/: check-readme.sh  pre-push  smoke.sh
src/: app.rs  cache.rs  cli.rs  config.rs  event.rs  highlight.rs  lib.rs  main.rs  preview.rs  signal.rs  theme.rs
src/diff/: mod.rs  parser.rs  untracked.rs
src/grouper/: llm.rs  mod.rs
src/preview/: markdown.rs  mermaid.rs
src/review/: llm.rs  mod.rs
src/ui/: diff_view.rs  file_tree.rs  mod.rs  preview_view.rs  review_view.rs  summary.rs
tests/: cli_stress.rs  diff_rendering.rs  incremental_grouping.rs  llm_integration.rs  preview_mode.rs  signal_and_stress.rs
tests/fixtures/: real-world.patch
tests/fixtures/results/: sample-with-issues.json  sample.v3.json
web/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/: app.html  test-setup.ts
web/src/lib/: api.ts  keyboard.test.ts  keyboard.ts  types.ts
web/src/lib/components/: CommandPalette.svelte  CommandPalette.test.ts  ConfigForm.svelte  ConfigForm.test.ts  CostChart.svelte  CostChart.test.ts  DiffViewer.svelte  FileTree.svelte  FileTree.test.ts  FullscreenViewer.svelte  GroupSidebar.svelte  MarkdownView.svelte  Mermaid.svelte  Mermaid.test.ts  Mindmap.svelte  NewReviewDialog.svelte  NewReviewDialog.test.ts  ProviderProbeRow.svelte  RepoCard.svelte  RepoCard.test.ts  RepoHistoryNav.svelte  RepoHistoryNav.test.ts  RerunButton.svelte  RerunButton.test.ts  ReviewSkeleton.svelte  RunMetadataPanel.svelte  RunMetadataPanel.test.ts  SettingsForm.svelte  SettingsForm.test.ts  SeverityBadge.svelte  SeverityBadge.test.ts  ShortcutCheatsheet.svelte  ShortcutCheatsheet.test.ts  (+5 more)
web/src/routes/: +layout.svelte  +page.svelte
web/tests/e2e/: fixtures.ts  globalSetup.ts  globalTeardown.ts  package-lock.json  package.json  playwright.config.ts  run-and-log.sh
(+26 files in other folders)
