[package]
name = "semantic-diff"
version = "0.3.0"
edition = "2021"
description = "A terminal diff viewer with AI-powered semantic grouping (Claude CLI / Copilot)"
license = "MIT"
repository = "https://github.com/alankyshum/semantic-diff"
keywords = ["git", "diff", "tui", "semantic", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
unidiff = "0.4"
syntect = "5.3"
similar = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
which = "8.0.2"
dirs = "6"
tui-tree-widget = "0.24"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
