[workspace]
members = [
    "crates/semantic-diff-core",
    "crates/semantic-diff-cli",
]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/alankyshum/semantic-diff"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1"
dirs = "6"
which = "8"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
unidiff = "0.4"
similar = "2"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
merman = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
