[package]
name = "semantic-diff-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A web-based diff viewer with AI-powered semantic grouping"
keywords = ["git", "diff", "web", "semantic", "claude"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "semantic-diff"
path = "src/main.rs"

[lib]
name = "semantic_diff_cli"
path = "src/lib.rs"

[dependencies]
semantic-diff-core = { path = "../semantic-diff-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dirs.workspace = true
which.workspace = true
futures.workspace = true
tempfile.workspace = true
chrono.workspace = true
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
include_dir = "0.7"
open = "5"
blake3.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest = { version = "0.12", features = ["json"] }
