[package]
name = "semantic-diff-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
blake3.workspace = true
dirs.workspace = true
which.workspace = true
futures.workspace = true
unidiff.workspace = true
similar.workspace = true
tempfile.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
