[package]
name = "semantic-diff-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
blake3.workspace = true
dirs.workspace = true
which.workspace = true
futures.workspace = true
unidiff.workspace = true
similar.workspace = true
tempfile.workspace = true
chrono.workspace = true
schemars.workspace = true
merman.workspace = true
pulldown-cmark = "0.10"
regex = "1"

[dev-dependencies]
tempfile.workspace = true
